--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Nuxt 3 to HestiaCP
 on:
   push:
     branches:
-      - main  # Cambia esto si usas otra rama para producción
+      - main
 
 jobs:
   deploy:
@@ -13,19 +13,17 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v4
 
-      - name: Configurar Node.js y PNPM
+      - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Instalar dependencias
-        run: |
-          corepack enable
-          pnpm install
+        run: npm install
 
       - name: Construir Nuxt 3
-        run: pnpm run build
+        run: npm run build
 
       - name: Subir archivos al servidor
         uses: appleboy/scp-action@v0.1.7
@@ -36,7 +34,7 @@ jobs:
           source: ".output/"
           target: "/home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html"
 
-      - name: Reiniciar PM2 (si usas SSR)
+      - name: Reiniciar PM2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
