--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: front/package-lock.json
 
       - name: Instalar dependencias
         run: |
