--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            mkdir -p /home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html
+            sudo mkdir -p /home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html
+            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} /home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html
 
       - name: Subir archivos al servidor
         uses: appleboy/scp-action@v0.1.7
