--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Nuxt 3 Frontend to HestiaCP
+name: Deploy Nuxt3 to Hestia
 
 on:
   push:
@@ -10,55 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout del código
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Verificar directorio front
-        run: ls -l
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: front/package-lock.json
+    - name: Install dependencies
+      run: |
+        cd front
+        npm install
 
-      - name: Instalar dependencias
-        run: |
-          cd front
-          npm install
+    - name: Build Nuxt3 project
+      run: |
+        cd front
+        npm run build
 
-      - name: Construir Nuxt 3
-        run: |
-          cd front
-          npm run build
+    - name: Upload build files to server
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        source: "front/.output/public/*"
+        target: "/home/usuario/web/miProyecto/public_html"
+        port: 22
 
-      - name: Crear directorio en el servidor
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            sudo mkdir -p /home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html
-            sudo chown -R ${{ secrets.SSH_USER }}:${{ secrets.SSH_USER }} /home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html
-
-      - name: Subir archivos al servidor
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "front/.output/"
-          target: "/home/${{ secrets.SSH_USER }}/web/${{ secrets.DOMAIN }}/public_html"
-          port: 22
-          debug: true
-
-      - name: Reiniciar PM2 (si es SSR)
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            pm2 restart all
+    - name: Execute remote commands
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          mkdir -p /home/usuario/web/miProyecto/public_html
+          chown -R usuario:usuario /home/usuario/web/miProyecto/public_html
